--- a/level16.html
+++ b/level16.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
   <title>Memory Game</title>
-  <link rel="stylesheet" href="level16.js"></link>
-  <script src="level16.css" charset="utf-8"></script>
+  <link rel="stylesheet" href="level16.css"></link>
+  <script src="level16.js" charset="utf-8"></script>
 </head>
 <body>
 
